# pypiserver-metrics-plugin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: build.yml
pypiserver_metrics_plugin/: __init__.py  __main__.py  collector.py  plugin.py  wsgi.py
